# dz_be_repo

./: .gitignore  pyproject.toml
src/: constants.py  main.py  settings.py  test_update_product.py
src/agent/: __init__.py  ecommerce_agent.py
src/chroma_db/: chroma.sqlite3
src/data/: order_items.json  orders.json  products.json  search_tool_results.json  status.json  tool_descriptions.json  user_details.json  users.json
src/models/: agent_model.py  login_model.py  product_model.py
src/repositories/: productdb.py  userdb.py
src/router/: agentrouter.py  dependencies.py  loginrouter.py
src/services/: loginservice.py
src/tools/: __init__.py  cancel_order.py  create_order.py  get_products.py  refund_order.py  search_product.py  search_tool.py  show_orders.py  update_product.py  update_user_profile.py
src/utils/: preprocessing.py
