[project]
name = "dz-be-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "pyjwt>=2.13.0",
    "uvicorn>=0.49.0",
    "strands-agents>=1.0.0",
    "strands-agents-tools>=0.1.0",
    "strands-agents[litellm]>=1.0.0",
    "python-dotenv>=1.0.0",
]
