[project]
name = "dz-be-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "pyjwt>=2.13.0",
    "uvicorn>=0.49.0",
    "python-dotenv>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.3.0",
    "langgraph>=0.3.0",
]
